@@ -47,12 +47,6 @@ mset_range_is_same_weights(const Xapian::MSet &mset1, unsigned int first1,
 			   const Xapian::MSet &mset2, unsigned int first2,
 			   unsigned int count);
 
-// Test that the percentages in two mset ranges are the same, ignoring docids.
-bool
-mset_range_is_same_percents(const Xapian::MSet &mset1, unsigned int first1,
-			    const Xapian::MSet &mset2, unsigned int first2,
-			    unsigned int count);
-
 bool operator==(const Xapian::MSet &first, const Xapian::MSet &second);
 
 inline bool operator!=(const Xapian::MSet &first, const Xapian::MSet &second)
